--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,20 @@
-/*body {
+* {
   margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-*/
+  font-family: Arial, Helvetica, sans-serif; }
+
+a {
+  text-decoration: none; }
+
+/* Navigation Links for Main Nav & Photography Nav */
+.Nav-Link, .Sub-Nav {
+  display: inline;
+  list-style: none; }
+
+#Nav {
+  border: 2px solid lime;
+  display: flex;
+  flex-direction: column; }
+  #Nav #Nicole-Sandry {
+    background-color: pink;
+    flex: 0 0 auto;
+    align-self: center; }
