--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -23,18 +23,16 @@ body {
   background-color: rgb(125,125,125);
 
   #nicoleSandry {
-    /*background-color: pink;*/
-
   	flex: 0 0 auto;
     order: 1;
-    width: 90%;
+    /*width: 80%;*/
+    font-size: 1.75rem;
     color: rgb(255,255,255);
-    background-color: green;
-    margin-left: .5rem;
+    margin-right: 30%;
+    /*background-color: green;*/
   }
 
   .NavLink {
-    /*border: 2px dashed purple;*/
     flex: 0 0 auto;
     order: 2;
     color: rgb(255,255,255);
@@ -49,12 +47,11 @@ body {
   display: flex;
   flex-flow: column nowrap;
   margin: 0;
-  padding: 0;
-  /*display: none;*/
   background-color: rgba(255,255,255,1.0);
-  background: #fff;
+  
+  // move div element below the Nav bar when dispalyed
   position: absolute;
-  top: 3.25rem;
+  top: 3rem;
 
   // use z-index to overlap SVG images
   z-index: 1;
@@ -62,27 +59,23 @@ body {
   .NavLinkMobile {
     flex: 0 0 auto;
     color: rgb(0,0,0);
-    border: 1px solid rgb(0,0,0);
     text-align: center;
-    padding: .75rem 0;
+    padding: .5rem 0;
   }
 }
 
 #mobile-icon {
-  border: 2px solid pink;
   flex: 0 0 auto;
   order: 2;
-  margin-right: .5rem;
+
+  :hover {
+    cursor: pointer;
+  }
 }
 
 #footer {
-  /*border: 2px solid black;*/
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
   padding-bottom: 1rem;
-
-  a {
-    /*background-color: pink;*/
-  }
 }
