--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -2,7 +2,7 @@
 	/*border: 2px dotted black;*/
 	display: flex;
 	flex-flow: column nowrap;
-	padding: 1.5rem 0;
+	padding-bottom: 1.5rem;
 	font-size: .85rem;
 }
 
@@ -12,7 +12,7 @@
 	flex: 0 0 auto;
 	width: 80%;
 	align-self: center;
-	margin-bottom: 1.25rem;
+	margin-top: 1.25rem;
 	padding-bottom: .75rem;
 	text-align: left;
 
