--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -29,11 +29,20 @@ body {
     margin-left: 2rem;
   }
 
-  .NavLink {
+  #desktop-nav {
     flex: 0 0 auto;
     order: 2;
-    color: rgb(255,255,255);
     display: none;
+
+    // desktop viewing
+    @media screen and (min-width: 480px) {
+      display: inline;
+    }
+  }
+
+  .NavLink {
+    color: rgb(255,255,255);
+    padding-right: 2rem;
   }
 }
 
@@ -59,6 +68,11 @@ body {
     text-align: center;
     padding: .5rem 0;
   }
+  
+  // hide when viewing on desktop layout
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
 }
 
 #mobile-icon {
@@ -71,11 +85,15 @@ body {
   :hover {
     cursor: pointer;
   }
+
+  @media screen and (min-width: 480px) {
+    display: none;
+  }
 }
 
 #footer {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-around;
-  padding-bottom: 1rem;
+  justify-content: space-between;
+  padding: 0 2rem 1rem 2rem;
 }
