Added media query to footer element to adjust styling for desktop viewing.

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -96,4 +96,11 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
   padding: 0 2rem 1rem 2rem;
+
+  @media screen and (min-width: 480px) {
+    justify-content: center;
+    a {
+      padding: 0 1rem;
+    }
+  }
 }
