--- a/client/src/index.css
+++ b/client/src/index.css
@@ -275,3 +275,8 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
   padding: 0 2rem 1rem 2rem; }
+  @media screen and (min-width: 480px) {
+    #footer {
+      justify-content: center; }
+      #footer a {
+        padding: 0 1rem; } }
