Added additional div elements to my Resume component so I can design the desktop layout.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -142,6 +142,9 @@ table {
   padding: 1.5rem 0;
   text-align: left;
   font-size: .83rem; }
+  @media screen and (min-width: 480px) {
+    #Resume {
+      padding: 0; } }
 
 #resume-container {
   flex: 0 0 auto;
@@ -149,31 +152,54 @@ table {
   width: 80%;
   display: flex;
   flex-flow: column nowrap; }
+  @media screen and (min-width: 480px) {
+    #resume-container {
+      display: block;
+      width: 100%;
+      background-color: powderblue; } }
 
-#contact-header {
-  font-size: 1.25rem;
-  text-align: center;
-  text-transform: uppercase; }
-
-#contact {
+#contact-container {
   flex: 0 0 auto;
   align-self: center;
   margin: .25rem 0 0 0;
   width: 14.75rem;
   font-size: 1rem; }
-  #contact li {
+  #contact-container #contact-header {
+    font-size: 1.25rem;
+    text-align: center;
+    text-transform: uppercase; }
+  #contact-container #contact li {
     list-style-type: none;
     text-align: left;
     margin: 0 0 0 .75rem;
     line-height: 1.5rem; }
-  #contact img {
+  #contact-container #contact img {
     width: 1rem;
     height: 1rem;
     padding-right: .375rem;
     position: relative;
     top: 2px; }
-  #contact #email {
+  #contact-container #contact #email {
     top: 3px; }
+  @media screen and (min-width: 480px) {
+    #contact-container {
+      /*order: 1;*/
+      flex: 0 0 30%;
+      align-self: flex-start;
+      margin: 0;
+      width: 15.25rem;
+      background-color: pink; } }
+
+@media screen and (min-width: 480px) {
+  #dev-exp, #pro-exp, #edu {
+    /*order: 2;*/
+    flex: 0 0 auto;
+    background-color: orange;
+    position: relative;
+    top: 0;
+    right: 0;
+    width: 81%;
+    align-self: flex-end; } }
 
 h2 {
   font-size: 1.25rem;
@@ -210,9 +236,16 @@ li {
 #tech-skills-col div:nth-child(1) {
   margin-top: -1rem; }
 
-.skills h4 {
+#skills-container .skills h4 {
   margin-top: 1rem;
   text-transform: uppercase; }
+
+@media screen and (min-width: 480px) {
+  #skills-container {
+    /*order: 1;*/
+    flex: 0 0 auto;
+    background-color: lime;
+    width: 15.25rem; } }
 
 .lineBreak {
   width: 75%;
@@ -221,6 +254,9 @@ li {
   border-right: none;
   border-bottom: 1px solid #CCCCCC;
   border-left: none; }
+  @media screen and (min-width: 480px) {
+    .lineBreak {
+      display: none; } }
 
 body {
   font-family: Arial, Helvetica, sans-serif; }
