Googled how to stack elements using flexbox. Found a hacky solution on Stackoverflow.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -144,7 +144,13 @@ table {
   font-size: .83rem; }
   @media screen and (min-width: 480px) {
     #Resume {
-      padding: 0; } }
+      background-color: yellow;
+      padding: 0;
+      width: 100%;
+      height: auto;
+      /*		* {
+			box-sizing: border-box;
+		}*/ } }
 
 #resume-container {
   flex: 0 0 auto;
@@ -154,9 +160,26 @@ table {
   flex-flow: column nowrap; }
   @media screen and (min-width: 480px) {
     #resume-container {
-      display: block;
-      width: 100%;
-      background-color: powderblue; } }
+      background-color: powderblue;
+      flex-flow: column wrap;
+      height: 1080px;
+      width: 100%; }
+      #resume-container #contact-container, #resume-container #skills-container, #resume-container #right-container {
+        flex: 1;
+        width: 30%; }
+      #resume-container #contact-container {
+        background-color: pink;
+        flex: 0 0 15%;
+        order: 1;
+        margin-top: 0; }
+      #resume-container #skills-container {
+        background-color: lime;
+        order: 2; }
+      #resume-container #right-container {
+        background-color: orange;
+        flex: 0 0 100%;
+        order: 3;
+        width: 70%; } }
 
 #contact-container {
   flex: 0 0 auto;
@@ -181,25 +204,6 @@ table {
     top: 2px; }
   #contact-container #contact #email {
     top: 3px; }
-  @media screen and (min-width: 480px) {
-    #contact-container {
-      /*order: 1;*/
-      flex: 0 0 30%;
-      align-self: flex-start;
-      margin: 0;
-      width: 15.25rem;
-      background-color: pink; } }
-
-@media screen and (min-width: 480px) {
-  #dev-exp, #pro-exp, #edu {
-    /*order: 2;*/
-    flex: 0 0 auto;
-    background-color: orange;
-    position: relative;
-    top: 0;
-    right: 0;
-    width: 81%;
-    align-self: flex-end; } }
 
 h2 {
   font-size: 1.25rem;
@@ -239,13 +243,6 @@ li {
 #skills-container .skills h4 {
   margin-top: 1rem;
   text-transform: uppercase; }
-
-@media screen and (min-width: 480px) {
-  #skills-container {
-    /*order: 1;*/
-    flex: 0 0 auto;
-    background-color: lime;
-    width: 15.25rem; } }
 
 .lineBreak {
   width: 75%;
