--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,10 +147,7 @@ table {
       background-color: yellow;
       padding: 0;
       width: 100%;
-      height: auto;
-      /*		* {
-			box-sizing: border-box;
-		}*/ } }
+      height: auto; } }
 
 #resume-container {
   flex: 0 0 auto;
