--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -27,6 +27,8 @@ body {
     font-size: 1.75rem;
     color: rgb(255,255,255);
     margin-left: 2rem;
+    letter-spacing: .125rem;
+    text-transform: uppercase;
   }
 
   #desktop-nav {
