--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -6,10 +6,26 @@
 	font-size: .83rem;
 	
 	@media screen and (min-width: 480px) {
-		background-color: yellow;
-		padding: 0;
+		/*background-color: yellow;*/
 		width: 100%;
 		height: auto;
+		font-size: 1rem;
+
+		h2 {
+			font-size: 1.5rem;
+		}
+
+		h3 {
+			font-size: 1.25rem;
+		}
+
+		h4 {
+			font-size: 1.17rem;
+		}
+
+		h5 {
+			font-size: 1rem;
+		}
 	}
 }
 
@@ -22,11 +38,11 @@
 	flex-flow: column nowrap;
 
 	@media screen and (min-width: 480px) {
-		background-color: powderblue;
+		/*background-color: powderblue;*/
 		flex-flow: column wrap;
 		// must set height to stack elements
-		height: 1080px;
-		width: 100%;
+		height: 725px;
+		width: 85%;
 
 		// must set this to stack elements
 		#contact-container, #skills-container, #right-container {
@@ -35,22 +51,42 @@
 		}
 
 		#contact-container {
-			background-color: pink;
-			flex: 0 0 15%;
+			/*background-color: pink;*/
+			flex: 0 0 auto;
 			order: 1;
-			margin-top: 0;
+			margin: 0;
+			align-self: flex-start;
+			border-right: 1px solid black;
+			padding-bottom: 1rem;
+
+			#contact-header {
+				text-align: left;
+				margin-left: .75rem;
+			}
 		}
 
 		#skills-container {
-			background-color: lime;
+			/*background-color: lime;*/
 			order: 2;
+			align-self: flex-start;
+			border-right: 1px solid black;
+
+			.skills, h2 {
+				margin-left: 1rem;
+			}
 		}
 
 		#right-container {
-			background-color: orange;
+			/*background-color: orange;*/
 			flex: 0 0 100%;
 			order: 3;
-			width: 70%;
+			width: 67%;
+			align-self: flex-end;
+			
+			h2:nth-child(1) {
+				margin: 0 0 .25rem 0;
+			}
+
 		}
 
 	}
@@ -98,6 +134,7 @@ h2 {
 	font-size: 1.25rem;
 	text-transform: uppercase;
 	margin: 1rem 0 .25rem 0;
+	letter-spacing: .075rem;
 }
 
 // Position & School
@@ -122,13 +159,13 @@ h5 {
 // Responsibilities
 ul, li {
 			width: 90%;
-			text-align: left;
 			list-style-position: outside;
 			list-style-type: disc;
 			margin-left: 1rem;
 }
 
 li {
+	text-align: left;
 	line-height: 1.25rem;
 	margin-bottom: .25rem;
 }
@@ -140,7 +177,11 @@ li {
 // fix the extra spacing between Technical Skills and Languages
 #tech-skills-col {
 	div:nth-child(1){
-		margin-top: -1rem;
+		margin-top: -.5rem;
+
+		@media screen and (min-width: 480px) {
+			margin-top: -.25rem;
+		}
 	}
 }
 
@@ -149,6 +190,7 @@ li {
 		h4 {
 			margin-top: 1rem;
 			text-transform: uppercase;
+			letter-spacing: .0625rem;
 		}
 	}
 }
