--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -41,7 +41,7 @@
 		/*background-color: powderblue;*/
 		flex-flow: column wrap;
 		// must set height to stack elements
-		height: 725px;
+		height: 950px;
 		width: 85%;
 
 		// must set this to stack elements
@@ -57,11 +57,12 @@
 			margin: 0;
 			align-self: flex-start;
 			border-right: 1px solid black;
-			padding-bottom: 1rem;
+			/*padding-bottom: 1rem;*/
 
 			#contact-header {
 				text-align: left;
 				margin-left: .75rem;
+				font-size: 1.5rem;
 			}
 		}
 
@@ -133,7 +134,7 @@
 h2 {
 	font-size: 1.25rem;
 	text-transform: uppercase;
-	margin: 1rem 0 .25rem 0;
+	margin: 1.5rem 0 .25rem 0;
 	letter-spacing: .075rem;
 }
 
@@ -170,7 +171,7 @@ li {
 	margin-bottom: .25rem;
 }
 
-#bachelor-of-arts-in-interdisciplinary-studies {
+#bachelor-of-arts-in-interdisciplinary-studies, #resident-assistant {
 	margin-top: 1rem;
 }
 
