--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -5,6 +5,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(232,231,229);
 
   a, a:visited {
     text-decoration: none;
@@ -19,7 +20,8 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: .5rem 0;
-  background-color: rgb(125,125,125);
+  background-color: rgb(239,189,172);
+  /*background-color: rgb(149,183,148);*/
 
   #nicoleSandry {
   	flex: 0 0 auto;
@@ -37,7 +39,7 @@ body {
     display: none;
 
     // desktop viewing
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 560px) {
       display: inline;
     }
   }
@@ -72,7 +74,7 @@ body {
   }
   
   // hide when viewing on desktop layout
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 560px) {
     display: none;
   }
 }
@@ -80,15 +82,13 @@ body {
 #mobile-icon {
   flex: 0 0 auto;
   order: 2;
-  color: rgb(255,255,255);
-  fill: currentColor;
   padding-right: 2rem;
 
   :hover {
     cursor: pointer;
   }
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 560px) {
     display: none;
   }
 }
@@ -99,7 +99,7 @@ body {
   justify-content: space-between;
   padding: 0 2rem 1rem 2rem;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 560px) {
     justify-content: center;
     a {
       padding: 0 1rem;
