--- a/client/src/scss/partials/resume.scss
+++ b/client/src/scss/partials/resume.scss
@@ -4,8 +4,8 @@
 	padding: 1.5rem 0;
 	text-align: left;
 	font-size: .83rem;
-	
-	@media screen and (min-width: 480px) {
+
+	@media screen and (min-width: 922px) {
 		/*background-color: yellow;*/
 		width: 100%;
 		height: auto;
@@ -37,11 +37,11 @@
 	display: flex;
 	flex-flow: column nowrap;
 
-	@media screen and (min-width: 480px) {
+	@media screen and (min-width: 922px) {
 		/*background-color: powderblue;*/
 		flex-flow: column wrap;
 		// must set height to stack elements
-		height: 950px;
+		height: 1080px;
 		width: 85%;
 
 		// must set this to stack elements
@@ -66,6 +66,10 @@
 			}
 		}
 
+		@media screen and (min-width: 1225px) {
+			width: 950px;
+		}
+
 		#skills-container {
 			/*background-color: lime;*/
 			order: 2;
@@ -74,6 +78,7 @@
 
 			.skills, h2 {
 				margin-left: 1rem;
+				padding-right: .75rem;
 			}
 		}
 
@@ -115,12 +120,26 @@
 		}
 
 		// contact icons
-		img {
+/*		img {
 			width: 1rem;
 			height: 1rem;
 			padding-right: .375rem;
 			position: relative;
 			top: 2px;
+		}*/
+
+		object {
+			width: 1rem;
+			height: 1rem;
+			padding-right: .375rem;
+			position: relative;
+			top: 2px;
+		}
+
+		a:hover {
+			object {
+				fill: yellow;
+			}
 		}
 
 		// adjust email icon to align with text
@@ -180,7 +199,7 @@ li {
 	div:nth-child(1){
 		margin-top: -.5rem;
 
-		@media screen and (min-width: 480px) {
+		@media screen and (min-width: 922px) {
 			margin-top: -.25rem;
 		}
 	}
@@ -190,6 +209,7 @@ li {
 	.skills {
 		h4 {
 			margin-top: 1rem;
+			padding-right: .5rem;
 			text-transform: uppercase;
 			letter-spacing: .0625rem;
 		}
@@ -204,7 +224,7 @@ li {
 	border-bottom: 1px solid #CCCCCC;
 	border-left: none;
 
-	@media screen and (min-width: 480px) {
+	@media screen and (min-width: 922px) {
 		display: none;
 	}
 }
