--- a/client/src/scss/partials/work.scss
+++ b/client/src/scss/partials/work.scss
@@ -15,6 +15,7 @@
 	margin-top: 1.25rem;
 	padding-bottom: .75rem;
 	text-align: left;
+	background-color: rgb(255,255,255);
 
 	@media screen and (min-width: 480px) {
 		max-width: 800px;
